syntax = "proto3";

option csharp_namespace = "Proto.Notifications.TraceReports";

service NotificationService {
  rpc SendTraceReportSent(TraceReportSentNotification) returns (NotificationResponse);
}

service TraceReportNotificationService {
  rpc SubscribeTraceReportNotifications(SubscribeRequest) returns (stream TraceReportNotification);
}

message TraceReportNotification {
  oneof notification {
    TraceReportSentNotification traceReportSent = 1;
  }
}

message SubscribeRequest {}

message TraceReportSentNotification {
  string traceReportDto = 1;
}

message NotificationResponse {
  bool success = 1;
}
