syntax = "proto3";

option csharp_namespace = "Proto.Command.TraceReports";


service TraceReportCommandService {
  rpc SendTraceReport (SendTraceReportCommandProto) returns (CommandResponse);
}

message SendTraceReportCommandProto {
  string traceReportDto = 1;
}

message CommandResponse {
  bool success = 1;
}
